trunk/Archive2/29/17063db4559290/main.cpp

class GebruikerPunt {
    // Het punt dat de gebruiker kiest
    int x;
    int y;
    int radius;
    List<PuntWaarDokterWoont> dokters;
}

class PuntWaarDokterWoont {
    int x;
    int y;
}

int main()
{
    GoogleMap << PuntWaarDokterWoont(1, 2);
    GoogleMap << PuntWaarDokterWoont(4, 6);
    GoogleMap << PuntWaarDokterWoont(2, 5);
    
    GebruikerPunt userChoice(10, 20, 9);
    for (Alle punten in google maps in de square (1, 11, 19, 29) (x1, y1, x2, y2))
    {
        als hij in de cirkel ligt
           userChoice.dokters << PuntWaarDokterWoont;
    }
}